# prefix_framing_experiment

./: .gitignore  GetStarted.md  existing_research_on_prefix_framing.md  prefix_framing_experiment_spec.md  pyproject.toml
docs/: GetStarted.md  gpt_oss_local.md
results/analysis/: anova_results.csv  effect_sizes.csv  full_data.csv  summary_stats.csv
results/framing_analysis/: framing_anova_results.csv  framing_effect_sizes.csv  framing_full_data.csv  framing_summary_stats.csv
scripts/: analyze.py  analyze_framing.py  run_experiment.py  run_framing_study.py  run_pilot.py  test_setup.py
src/prefix_framing/: __init__.py  analysis.py  cli.py  metrics.py  models.py  runner.py  storage.py
src/prefix_framing/data/: __init__.py  framings.py  prefixes.py  prompts.py
src/prefix_framing/providers/: __init__.py  base.py  ollama.py
