[project]
name = "prefix-framing-experiment"
version = "0.1.0"
description = "Investigating how opening phrases shape language model responses"
readme = "prefix_framing_experiment_spec.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.3.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "textstat>=0.7.0",      # Readability scores
    "nltk>=3.8.0",          # NLP utilities
    "tqdm>=4.65.0",         # Progress bars
    "rich>=13.0.0",         # Pretty console output
]

[project.optional-dependencies]
api = [
    "anthropic>=0.30.0",
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
pf-pilot = "prefix_framing.cli:run_pilot"
pf-run = "prefix_framing.cli:run_experiment"
pf-analyze = "prefix_framing.cli:analyze"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prefix_framing"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
